# ds250

./: README.md  flake.nix  pyproject.toml
ds250.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test.py
test/polar_chapter_1/: test.py
test/wed_class/: test.qmd
test/week2/: test.html  test.qmd
test/week2/test_files/libs/bootstrap/: bootstrap-0e7144b51b1311dce330ab5b48d20e8e.min.css
unit0/: P0_template.qmd
unit1/: names_prob.csv  references.bib  unit1_task1_template.html  unit1_task1_template.qmd  unit1_task2_template.qmd
