[project]
name = "ds250"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
  "numpy",
  "polars",
  "scikit-learn",
  "lets-plot",
  "palmerpenguins",
  "nbformat",
  "nbclient",
  "pyyaml",
  "setuptools",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Don't try to auto-discover packages.
packages = []
